[package]
name = "runicorn-desktop"
version = "0.5.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Tauri core (v2)
tauri = { version = "2.4", features = [] }
# Tauri shell plugin for sidecar processes
tauri-plugin-shell = "2.0"
# Lightweight HTTP client for readiness checks
ureq = { version = "2", features = ["json"] }

[build-dependencies]
tauri-build = { version = "2.4", features = [] }
